# climatevis

./: CLAUDE.md  MANIFEST.in  PLOTTING_TEST_README.md  README.md  README_AI.md  app_plotting_test.py  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/rules/Marimo/: CLAUDE.md  INTEGRATED_MARIMO_RULES.mdc  TEMPLATE.py  marimo-api.md  marimo-style.mdc
.cursor/rules/Weather/: domain-weather.mdc  prd-climateplots-package.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish.yml
components/: __init__.py  weather.py
plots/: __init__.py  annual_heatmap.py  annual_profile_daily.py  cumulative_probability.py  exceedance.py  exceedance_bands.py  histogram.py  histogram_multiple.py  monthly_profiles.py  monthly_profiles_bands.py  plot_dataframeOLD.py  wind_rose.py
src/climatevis/: __init__.py
src/climatevis/components/: __init__.py  templates.py  weather.py
src/climatevis/plots/: __init__.py  annual_heatmap.py  annual_profile_daily.py  box_3d_affordance.py  cumulative_probability.py  exceedance.py  exceedance_bands.py  histogram.py  histogram_multiple.py  monthly_profiles.py  monthly_profiles_bands.py  plot_dataframeOLD.py  plot_series.py  wind_rose.py
src/climatevis/templates/: __init__.py  plotly_template_base.yaml  plotly_template_base_autosize.yaml  plotly_template_test.yaml
src/climatevis/util/: __init__.py  test_validation_integration.py  util_plotly.py  util_psychro_chart.py  util_psychro_chart_OLD.py  validation.py
tasks/: prd-configuration-system.md  prd-library-improvements-phase1.md  tasks-prd-climateplots-package.md  tasks-prd-library-improvements-phase1.md
tests/: __init__.py  test_function_availability.py  test_imports.py  test_plotting_integration.py  test_template_autoload.py  test_templates.py  test_utils.py  test_validation_integration.py
user_test_marimo/: app_plotting_test.py
util/: util_plotly.py
